depoly/infra/prometheus/deploy-prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
        oneagent.dynatrace.com/inject: "false"
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: registry.groupt.fbt.com/tpebnknanot/infra/prometheus:v2.50.1
        args: [ "--config.file=/etc/prometheus/prometheus.yml","--storage.tsdb.path=/prometheus","--web.console.libraries=/usr/share/prometheus/console_libraries","--web.console.templates=/usr/share/prometheus/consoles","--storage.tsdb.retention.size=5GB","--web.enable-admin-api" ]
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: config
            mountPath: /etc/prometheus
          - name: pvc-prometheus
            mountPath: /prometheus
        resources:
          limits:
            memory: 4096Mi
            cpu: 500m
          requests:
            memory: 128Mi
            cpu: 50m
      imagePullSecrets:
      - name: tpebnknanot-secret-harbor
      volumes:
        - name: config
          configMap:
            name: prometheus-server-conf
        - name: pvc-prometheus
          persistentVolumeClaim:
            claimName: pvc-prometheus
