depoly/infra/prometheus/svc-prometheus.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - port: 8080
    targetPort: 9090
